# ptc

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  flake.nix  go.mod  go.sum  shell.nix
agent/: agent_test.go  bench_test.go  discover.go  engine.go  guest.go  loop.go  quickjs_guest.wasm  review_fixes_test.go  sandbox.go  serve.go  service.go  tool.go  wasm.go
cmd/agent/: main.go  tools.go
examples/backoffice/: main.go  services.go
examples/orchestrator/: main.go  services.go  tools.go
examples/primitives/: main.go  tools.go
examples/research/: main.go  tools.go
guest/: Dockerfile.build  guest.c
guest-rs/: Cargo.toml  rust-toolchain.toml
guest-rs/.cargo/: config.toml
guest-rs/src/: abi.rs  engine.rs  lib.rs
spike/rquickjs-guest/: Cargo.toml  README.md
spike/rquickjs-guest/src/: lib.rs
