[package]
name = "rquickjs-guest"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rquickjs = "0.9"

# Optimize for size — this is the number the feasibility spike needs to measure.
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
